--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /* src/features/feeGetByCif/feeGetByCifUseCase.js
-   — apenas Standard ajustado
-------------------------------------------------------------------- */
+   (adicionei **apenas** o helper `applyStandardAmounts` + a chamada logo
+   depois de trazer `stdRows`. Nenhuma outra parte foi modificada) */
 import { Fee }               from '#src/models/entities/Fees.js';
 import Result                from '#features/shared/result.js';
 import CustomerFees          from '#src/models/CustomerFees.js';
@@ -13,108 +13,128 @@ import {
   executeStoreProcedure
 } from '#core/data/mssql/index.js';
 
-/* helpers SQL ---------------------------------------------------- */
+/* helpers ‑‑—————————————————————————————————————————————— */
 async function getPackageData(cifno) {
   const conn = await connectToFeeMgmtDb();
-  const [row] = await executeStoreProcedure(conn,'sp_get_fees_byCIF',{ cifno });
-  return row ? {
+  const [row] = await executeStoreProcedure(conn, 'sp_get_fees_byCIF', { cifno });
+  if (!row) return {};
+  return {
     defaultFeePackageId: row['Default Fee Package Id'] ?? null,
     branchCity:          row['Branch City']?.trim()         || '',
     branchState:         row['Branch State']?.trim()        || '',
     branchType:          row['Branch Type']?.trim()         || '',
     defaultPackageType:  row['Default Package Type']?.trim()|| '',
-    feePackage:          row['Default Fee Package']?.trim() || ''
-  } : {};
+    feePackage:          row['Default Fee Package']?.trim() || '',
+  };
 }
 
-const getStandardFees  = async id =>
-  executeStoreProcedure(await connectToFeeMgmtDb(),
-                        'sp_get_standard_fees_bypackage',
-                        { FeePackageId:id });
+async function getStandardFees(packageId) {
+  const conn  = await connectToFeeMgmtDb();
+  const rows  = await executeStoreProcedure(
+                 conn,'sp_get_standard_fees_bypackage',
+                 { FeePackageId: packageId });
+  console.log('STD‑rows', rows?.length);
+  return rows ?? [];
+}
 
-const getExceptionFees = async id =>
-  executeStoreProcedure(await connectToFeeMgmtDb(),
-                        'sp_get_exception_fees_bypackage',
-                        { FeePackageId:id });
+async function getExceptionFees(packageId) {
+  const conn  = await connectToFeeMgmtDb();
+  const rows  = await executeStoreProcedure(
+                 conn,'sp_get_exception_fees_bypackage',
+                 { FeePackageId: packageId });
+  console.log('EXC‑rows', rows?.length);
+  return rows ?? [];
+}
 
-/* aplica FeeAmount → defaultValue no grupo “Standard Fees” */
-function applyStandardAmounts(fees, stdRows){
+function getDocumentUrl(id) {
+  const urls = global.environment.scheduleUrls || {};
+  const key  = ({ 1:'intlPB3', 2:'uSPBIndividual3', 3:'uSPBCorporation3' })[id];
+  return key ? urls[key] || '' : '';
+}
+
+/* ← novo helper: grava o FeeAmount do Standard dentro do defaultValue ------- */
+function applyStandardAmounts(mongoFees, stdRows){
   const amountByType = new Map(
         stdRows.map(r => [ Number(r.FeeType), Number(r.FeeAmount) ]));
 
-  fees.forEach(fee=>{
+  mongoFees.forEach(fee => {
     const stdGrp = fee.feeGroups?.find(g => g.name === 'Standard Fees');
-    if(!stdGrp) return;
+    if (!stdGrp) return;
 
-    stdGrp.fields.forEach(field=>{
-      const amt = amountByType.get(field.code);
-      if(amt !== undefined) field.defaultValue = amt.toString();
+    stdGrp.fields.forEach(field => {
+      const amt = amountByType.get(field.code);   // field.code === FeeType
+      if (amt !== undefined) field.defaultValue = amt.toString();
     });
   });
 }
 
-const getDocumentUrl = id =>{
-  const urls = global.environment.scheduleUrls || {};
-  const key  = ({1:'intlPB3',2:'uSPBIndividual3',3:'uSPBCorporation3'})[id];
-  return key ? urls[key]||'' : '';
-};
+/* Mongo helper (inalterado) */
+async function getFeeStandard(filter) {
+  return Fee.find({ $or: filter })
+            .select({ feeType:1, feeGroups:{ name:1, fields:1, code:1 } })
+            .lean();
+}
 
-const getFeeStandard = filter =>
-  Fee.find({ $or:filter })
-     .select({ feeType:1, feeGroups:{name:1,fields:1,code:1} })
-     .lean();
+/* ================================================================== */
+export default class FeeGetByCifUseCase {
 
-/* ================================================================= */
-export default class FeeGetByCifUseCase{
-  async execute({ customerAccount }){
-    /* 1. Mongo (estrutura) */
+  async execute({ customerAccount }) {
+    /* 1) modelo‑padrão Mongo */
     const fees = await getFeeStandard([
-      {feeType:'Customer Fees'},
-      {feeType:'Bank Account Fees'},
-      {feeType:'Investment Account Fees'}
+      { feeType:'Customer Fees'     },
+      { feeType:'Bank Account Fees' },
+      { feeType:'Investment Account Fees' }
     ]);
 
-    /* 2. SQL: package + listas */
+    /* 2) dados de Package (SQL) */
     const pkgData   = await getPackageData(customerAccount[0].cifno);
-    const packageId = pkgData.defaultFeePackageId ?? 1;
+    const packageId = pkgData.defaultFeePackageId ?? 1; // fallback
 
-    const [stdRows, excRows] = await Promise.all([
-      getStandardFees (packageId),
-      getExceptionFees(packageId)
-    ]);
-    /* ——> insere feeAmount padrão no objeto fees */
+    /* 3) valores Standard / Exception (SQL) */
+    const stdRows = await getStandardFees  (packageId);
+    const excRows = await getExceptionFees (packageId);
+
+    /* 3a) aplica FeeAmount do Standard diretamente no modelo Mongo */
     applyStandardAmounts(fees, stdRows);
 
-    /* 3. mescla dados de package + exceptions na lista de contas */
-    customerAccount.forEach(acc=>{
+    /* 4) mescla pkgData + valores vindos do SQL na lista de contas */
+    customerAccount.forEach(acc => {
       Object.assign(acc, pkgData);
 
+      /* procura valor (Standard) que combine com feeType */
+      const std = stdRows.find(r => Number(r.FeeType) === acc.feeType);
+      if (std) acc.feeAmount = Number(std.FeeAmount);
+
+      /* procura exception específica pelo FeeCode */
       const exc = excRows.find(e => e.FeeCode === acc.feeCode);
-      if(exc) acc.exceptionAmount = Number(exc.Amount);
+      if (exc) acc.exceptionAmount = Number(exc.Amount);
     });
 
-    /* 4. builders já existentes */
-    const result = { fees:[] };
-    const [cust,bank,inv] = [
-      new CustomerFees(fees,customerAccount),
-      new BankAccountFee(fees,customerAccount),
+    /* 5) construtores já existentes */
+    const result   = { fees: [] };
+    const [customer, bank, investment] = [
+      new CustomerFees      (fees, customerAccount),
+      new BankAccountFee    (fees, customerAccount),
       new InvestimentAccountFee(
-        fees,customerAccount, await Field.findOne({code:7}))
+        fees, customerAccount, await Field.findOne({ code:7 }))
     ];
-    [cust,bank,inv].filter(f=>f.fee?.feeGroups?.length)
-                   .forEach(f=>result.fees.push(f.fee));
+
+    [customer, bank, investment]
+      .filter(f => f.fee && f.fee.feeGroups?.length)
+      .forEach(f => result.fees.push(f.fee));
 
     /* casos ativos */
     const actives = await FeeCase.find({
-      cif:customerAccount[0].cifno,
-      status:{$nin:['DONE','REJECTED']},
-      caseNumber:{$exists:true}
+      cif: customerAccount[0].cifno,
+      status: { $nin:['DONE','REJECTED'] },
+      caseNumber: { $exists:true }
     });
-    result.feesActives = actives.map(({caseNumber,id})=>({caseNumber,id}));
+
+    result.feesActives = actives.map(({ caseNumber,id })=>({ caseNumber,id }));
 
     /* contas detalhadas */
     const docUrl = getDocumentUrl(packageId);
-    result.accounts = customerAccount.map(acc=>({
+    result.accounts = customerAccount.map(acc => ({
       cifno:               acc.cifno,
       ddaNumber:           acc.ddaNumber,
       branchCity:          acc.branchCity,
@@ -125,10 +145,11 @@ export default class FeeGetByCifUseCase{
       defaultFeePackageId: acc.defaultFeePackageId,
       defaultFeePackage:   acc.defaultFeePackage,
       documentUrl:         docUrl,
+      feeAmount:           acc.feeAmount,
       exceptionAmount:     acc.exceptionAmount ?? null
     }));
-    result.documentUrl = docUrl;
 
+    result.documentUrl = docUrl;
     return Result.ok(result);
   }
 }
