--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ Veja que o FeeCode vem o codigo JH001 e o FeeType que utilizamos para identifica
 Esta com suadescrição...então vai ter que identificar e codifica-lo da forma necessaria....sao 1, 2 e 3 os codigos deles se não me engano...
 
 Lembrando....mesma coisa agora, insere o que for necessario, mas não modifica nada do que ja temos...pois esta TOP já
+
+Só queremos utilizar o Amount dele 
